[package]
name = "bert-burn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
nexcore-dna = { workspace = true }
