[package]
name = "bert-burn"
description = "BERT language model implementation using the Burn deep learning framework"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true

keywords = ["nexcore", "machine-learning", "ai"]
categories = ["science", "algorithms"]
[lints]
workspace = true

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
nexcore-dna = { workspace = true }
