[package]
name = "borrow-miner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Borrow Miner — PV signal detection educational game logic"

[dependencies]
nexcore-lex-primitiva = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
