[package]
name = "borrow-miner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "LicenseRef-NexVigilant-Proprietary-1.0"
repository.workspace = true
homepage.workspace = true
description = "Borrow Miner — PV signal detection educational game logic"

keywords = ["nexcore", "pharmacovigilance", "drug-safety"]
categories = ["science"]
[dependencies]
nexcore-lex-primitiva = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
