
[package]
name = "claude-fs-mcp"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "MCP server for full-access .claude filesystem operations with automatic backups"

[[bin]]
name = "claude-fs-mcp"
path = "src/main.rs"

[dependencies]
nexcore-error = { workspace = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
tracing = { version = "0.1.40" }
tokio = { version = "1.38.0", features = ["full"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1.2"
flate2 = { version = "1.0.30" }
tar = { version = "0.4.41" }
nexcore-fs = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1.0.120" }

[lints.rust]
async_fn_in_trait = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_must_use = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"
map_unwrap_or = "allow"
manual_map = "allow"
option_map_or_none = "allow"
derivable_impls = "allow"
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
todo = "allow"
unimplemented = "allow"
unreachable = "allow"
