
[package]
name = "claude-fs-mcp"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "MCP server for full-access .claude filesystem operations with automatic backups"

[[bin]]
name = "claude-fs-mcp"
path = "src/main.rs"

[dependencies]
nexcore-error = { workspace = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
tracing = { version = "0.1.40" }
tokio = { version = "1.38.0", features = ["full"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1.2"
flate2 = { version = "1.0.30" }
tar = { version = "0.4.41" }
nexcore-fs = { workspace = true }
nexcore-chrono = { workspace = true }

[dev-dependencies]
serde_json = { version = "1.0.120" }


[lints]
workspace = true
