[package]
name = "claude-knowledge-mcp"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "MCP server for active tapping into Claude's knowledge management system and anatomical tools"

[[bin]]
name = "claude-knowledge-mcp"
path = "src/main.rs"

[dependencies]
# MCP server framework
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1.0" }

# Error handling
nexcore-error = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
rusqlite = { workspace = true }

# Utilities
chrono = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
