[package]
name = "claude-knowledge-mcp"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-NexVigilant-Proprietary-1.0"
repository.workspace = true
homepage.workspace = true
description = "MCP server for active tapping into Claude's knowledge management system and anatomical tools"

keywords = ["nexcore", "mcp", "api"]
categories = ["web-programming"]
[[bin]]
name = "claude-knowledge-mcp"
path = "src/main.rs"

[dependencies]
# MCP server framework
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1.0" }

# Error handling
nexcore-error = { workspace = true, features = ["mcp", "tokio_runtime", "tracing_filter"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
rusqlite = { workspace = true }

# Utilities
nexcore-fs = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
