
[package]
name = "claude-mcp-config"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Rust CLI to manage .claude MCP config"

[[bin]]
name = "claude-mcp-config"
path = "src/main.rs"

[dependencies]
nexcore-error = { workspace = true }
serde_json = { version = "1.0.120" }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }


[lints]
workspace = true
