
[package]
name = "claude-mcp-config"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-NexVigilant-Proprietary-1.0"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Rust CLI to manage .claude MCP config"

keywords = ["nexcore", "mcp", "api"]
categories = ["web-programming"]
[[bin]]
name = "claude-mcp-config"
path = "src/main.rs"

[dependencies]
nexcore-error = { workspace = true }
serde_json = { version = "1.0.120" }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }


[lints]
workspace = true
