
[package]
name = "claude-repl-mcp"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-NexVigilant-Proprietary-1.0"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "MCP bridge to Claude Code CLI"

keywords = ["nexcore", "mcp", "api"]
categories = ["web-programming"]
[[bin]]
name = "claude-repl-mcp"
path = "src/main.rs"

[dependencies]
nexcore-error = { workspace = true, features = ["mcp", "tokio_runtime", "tracing_filter"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
tracing = { version = "0.1.40" }
tokio = { version = "1.38.0", features = ["full"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1.2"

[dev-dependencies]
serde_json = { version = "1.0.120" }


[lints]
workspace = true
