
[package]
name = "codex-mcp-config"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "Rust CLI to install MCP config into .codex settings"

[[bin]]
name = "codex-mcp-config"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.86" }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }
toml_edit = { version = "0.22.16" }
chrono = { version = "0.4.38", features = ["serde"] }

[lints.rust]
async_fn_in_trait = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_must_use = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"
map_unwrap_or = "allow"
manual_map = "allow"
option_map_or_none = "allow"
derivable_impls = "allow"
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
todo = "allow"
unimplemented = "allow"
unreachable = "allow"
