
[package]
name = "codex-mcp-config"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "Rust CLI to install MCP config into .codex settings"

[[bin]]
name = "codex-mcp-config"
path = "src/main.rs"

[dependencies]
nexcore-error = { workspace = true }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }
toml_edit = { version = "0.22.16" }
nexcore-chrono = { workspace = true }


[lints]
workspace = true
