
[package]
name = "compendious-machine"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "MCP server for text density optimization - maximize information per token"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }

[[bin]]
name = "compendious-machine"
path = "src/main.rs"

[lints]
workspace = true
