
[package]
name = "core-true"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-NexVigilant-Proprietary"
description = "Parser and validator for .true formal axiom files"
publish = false

[dependencies]
nexcore-lex-primitiva = { version = "0.1.0", path = "../nexcore-lex-primitiva", registry = "nexcore" }

[lints]
workspace = true
