
[package]
name = "core-true"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-NexVigilant-Proprietary-1.0"
repository.workspace = true
homepage.workspace = true
description = "Parser and validator for .true formal axiom files"
publish = false

keywords = ["nexcore", "compiler", "language"]
categories = ["compilers"]
[dependencies]
nexcore-lex-primitiva = { version = "0.1.0", path = "../nexcore-lex-primitiva" }

[lints]
workspace = true
